usb data received is working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "usbd_custom_hid_if.h": "c",
-        "usbd_core.h": "c"
+        "usbd_core.h": "c",
+        "usbd_customhid.h": "c"
     }
 }
