--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "usbd_custom_hid_if.h": "c",
         "usbd_core.h": "c",
-        "usbd_customhid.h": "c"
+        "usbd_customhid.h": "c",
+        "braille_driver.h": "c",
+        "braille_driver_config.h": "c"
     }
 }
